# EmoBias

./: README.md  pyproject.toml
emobias/: __init__.py  config.py
